# scrapper

./: Dockerfile  README.md  docker-compose-test.yaml  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  scrapper.py
