[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["terminaldweller <thabogre@gmail.com>"]
license = "GPLv3.0"

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.1"
beautifulsoup4 = "^4.11.1"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
transformers = "^4.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
